# screenshot-app

./: .gitignore  ScreenshotApp.htm  package-lock.json  package.json  vite.config.ts
.github/workflows/: release-windows.yml  release.yml
ScreenshotApp_files/: 690eee3b2a79dd49cfd968db_6544eda5f000985a163a8687_69ec9e368f21bcf31a4f8d20_finsweetcomponentsconfig-1.0.2.js  analyze-agency-f4b015.webflow.69ebc8e68db4e4714dfca86b.adc9728f5.opt.min.css  analyze-agency-f4b015.webflow.shared.3593c15ff.min.css  css  webflow.312cf590.efe966aa4e3a14b2.js
scratch/: generate_icons.sh
screenshot-app/: index.html  package-lock.json
screenshot-app/src-tauri/: Cargo.toml
screenshot-app/src-tauri/src/: commands.rs
screenshot-app/src/components/: MenuBar.tsx  ShapePanel.tsx  StatusBar.tsx
screenshot-app/src/formats/: ssap.ts
screenshot-app/src/store/: appStore.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: download.jfif  icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: CanvasArea.tsx  CapturePill.tsx  FloatingContextMenu.tsx  MainToolbar.tsx  RecordPill.tsx  SettingsModal.tsx  TitleBar.tsx  Toast.tsx  Toolbar.tsx
src/formats/: wbap.ts
src/store/: appStore.ts
src/styles/: index.css
